kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: az
  labels:
    team: azure-cli
    purpose: automation
    flavor: production
