kubernetes/a01store-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: a01store
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: a01store
        version: 0.1.0
    spec:
      containers:
      - name: a01store
        image: a01reg.azurecr.io/a01store:0.1.1
        ports:
        - containerPort: 80
