kubernetes/a01store-db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: a01-database
spec:
  type: ExternalName
  externalName: a01store-test.postgres.database.azure.com
