kubernetes/a01store-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a01store
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: a01store
