kubernetes/a01-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: task-store-db-service
  labels:
    system: a01
spec:
  type: ExternalName
  externalName: a01taskstore.postgres.database.azure.com
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: task-store-front
  labels:
    system: a01
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: task-store-front
    spec:
      containers:
      - name: task-store-front
        image: azureclidev.azurecr.io/a01store:0.4.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: azureclidev-acr
---
apiVersion: v1
kind: Service
metadata:
  name: task-store-web-service-internal
spec:
  ports:
  - port: 80
  selector:
    app: task-store-front
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: a01store-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: a01store-tls
    hosts:
    - a01.azclitest.com
  rules:
  - host: a01.azclitest.com
    http:
      paths:
      - path: /
        backend:
          serviceName: task-store-web-service-internal
          servicePort: 80
